--- a/SheDrivesMobility113_Viktoria_Brandenburg.html
+++ b/SheDrivesMobility113_Viktoria_Brandenburg.html
@@ -28,6 +28,7 @@ body {
         font-size: 0.7em;
         opacity: 0.7;
         margin: 0;
+      display: none;
     }
 
     .transcript-line {
